# telegram-sticker-export-bot

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: handlers.rs  limiter.rs  main.rs  util.rs
src/observability/: resource.rs  tracing.rs
