[package]
name = "sticker-export-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sticker-export-bot"
path = "src/main.rs"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"

opentelemetry = "0.22"
opentelemetry-otlp = { version = "0.15", features = ["http-proto", "grpc-tonic", "reqwest"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.14"
tracing = "0.1"
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

teloxide = { version = "0.12", features = ["macros"] }
dptree = "0.3"
reqwest = "0.12"
anyhow = "1.0"
image = "0.25"
infer = "0.15"
tempfile = "3"
