[package]
name = "sticker-export-bot"
version = "1.1.2"
edition = "2021"
repository = "https://github.com/AH-dark/telegram-sticker-export-bot.git"
description = "Telegram bot for exporting stickers from sticker packs"
license = "AGPL-3.0"
authors = [
    "AH-dark <ahdark0428@gmail.com>"
]
readme = "README.md"

[[bin]]
name = "sticker-export-bot"
path = "src/main.rs"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
futures = "0.3"

opentelemetry = "0.23"
opentelemetry-otlp = { version = "0.16", features = ["http-proto", "grpc-tonic", "reqwest"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.15"
tracing = "0.1"
tracing-opentelemetry = "0.24"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

teloxide = { version = "0.12", features = ["macros"], git = "https://github.com/avoonix/teloxide.git" }
dptree = "0.3"
reqwest = "0.12"
anyhow = "1.0"
image = "0.25"
infer = "0.16"
tempfile = "3"
zip = "2.1"
governor = "0.6"
